fix: Fix featured image height on mobile layout

--- a/jevoo/public/assets/css/style.css
+++ b/jevoo/public/assets/css/style.css
@@ -3330,7 +3330,6 @@ body.fix {
 }
 .product-thumb img {
   width: 100%;
-  height: 250px;
   object-fit: cover;
   aspect-ratio: 1 / 1;
 }
